--- a/assets/pages/upcoming_events.html
+++ b/assets/pages/upcoming_events.html
@@ -79,60 +79,51 @@
                     <div class="formulario_1">                
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
-                        <label class="form-check-label" for="flexCheckDefault1">
-                          Category 1
-                        </label>
-                      </div>
-                      <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault1">Category 1</label>
+                    </div>
+                    <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                        <label class="form-check-label" for="flexCheckDefault2">
-                          Category 2
-                        </label>
-                      </div>
-                      <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault2">Category 2</label>
+                    </div>
+                    <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault3">
-                        <label class="form-check-label" for="flexCheckDefault3">
-                          Category 3
-                        </label>
-                      </div>
-                      <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault3">Category 3</label>
+                    </div>
+                    <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault4">
-                        <label class="form-check-label" for="flexCheckDefault4">
-                          Category 4
-                        </label>
-                      </div>
-                      <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault4">Category 4</label>
+                    </div>
+                    <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault5">
-                        <label class="form-check-label" for="flexCheckDefault5">
-                          Category 5
-                        </label>
-                      </div>
+                        <label class="form-check-label" for="flexCheckDefault5">Category 5</label>
+                    </div>
                     </div>
                     <div class="formulario_2">
-                      <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search" aria-label="Buscar" aria-describedby="button-addon2">
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Go</button>
-                      </div>
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search" aria-label="Buscar" aria-describedby="button-addon2">
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Go</button>
+                        </div>
                     </div>                
                 </div>
             </form>
-            <!--Contenido-->            <div class="container cards">
+            <!--Contenido-->            
+            <div class="container cards">
                 <!--Card 1-->
                 <div class="tarjeta">
-                  <div class="img_tarjeta ad1" ></div>
-                  <div class="cuerpo_tarjeta">
-                    <h3>Marathon</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum asperiores temporibus ullam molestias error, accusanti.</p>
-                    <div class="precio_tarjeta">
-                      <p>Precio: U$D4500</p>
-                      <div class="boton_tarjeta">
-                        <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
-                      </div>
-                    </div>                    
-                  </div>
+                    <div class="img_tarjeta ad1" ></div>
+                    <div class="cuerpo_tarjeta">
+                        <h3>Marathon</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum asperiores temporibus ullam molestias error, accusanti.</p>
+                        <div class="precio_tarjeta">
+                            <p>Precio: U$D4500</p>
+                            <div class="boton_tarjeta">
+                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                            </div>
+                        </div>                    
+                    </div>
                 </div>
-                  <!--Card 2-->
-                  <div class="tarjeta">
+                <!--Card 2-->
+                <div class="tarjeta">
                     <div class="img_tarjeta ad2" >
                     </div>
                     <div class="cuerpo_tarjeta">
@@ -146,8 +137,8 @@
                         </div>                    
                     </div>
                 </div>
-                  <!--Card 3-->
-                  <div class="tarjeta">
+                <!--Card 3-->
+                <div class="tarjeta">
                     <div class="img_tarjeta ad3" >
                     </div>
                     <div class="cuerpo_tarjeta">
@@ -163,19 +154,20 @@
                 </div>
                 <!--Card 4-->
                 <div class="tarjeta">
-                  <div class="img_tarjeta ad4" >
-                  </div>
-                  <div class="cuerpo_tarjeta">
-                      <h3>Pachamama Flavors</h3>
-                      <p>Enjoying Historic cultures and inimaginable dishes from all over the Andes, for those who love great wines and unique food.</p>
-                      <div class="precio_tarjeta">
-                          <p>Price: U$D13000</p>
-                          <div class="boton_tarjeta">
-                              <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
-                          </div>
-                      </div>                    
-                  </div>
-              </div>          
+                    <div class="img_tarjeta ad4" >
+                    </div>
+                    <div class="cuerpo_tarjeta">
+                        <h3>Pachamama Flavors</h3>
+                        <p>Enjoying Historic cultures and inimaginable dishes from all over the Andes, for those who love great wines and unique food.</p>
+                        <div class="precio_tarjeta">
+                            <p>Price: U$D13000</p>
+                            <div class="boton_tarjeta">
+                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                            </div>
+                        </div>                    
+                    </div>
+                </div>
+            </div>          
     </main>
     <footer>
         <div class="container navigation">
