--- a/assets/pages/upcoming_events.html
+++ b/assets/pages/upcoming_events.html
@@ -117,7 +117,7 @@
                         <div class="precio_tarjeta">
                             <p>Precio: U$D4500</p>
                             <div class="boton_tarjeta">
-                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                                <a class="btn btn-primary" href="../pages/details.html">More</a>
                             </div>
                         </div>                    
                     </div>
@@ -132,7 +132,7 @@
                         <div class="precio_tarjeta">
                             <p>Price: U$D4500</p>
                             <div class="boton_tarjeta">
-                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                                <a class="btn btn-primary" href="../pages/details.html">More</a>
                             </div>
                         </div>                    
                     </div>
@@ -147,7 +147,7 @@
                         <div class="precio_tarjeta">
                             <p>Price: U$D9000</p>
                             <div class="boton_tarjeta">
-                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                                <a class="btn btn-primary" href="../pages/details.html">More</a>
                             </div>
                         </div>                    
                     </div>
@@ -162,7 +162,7 @@
                         <div class="precio_tarjeta">
                             <p>Price: U$D13000</p>
                             <div class="boton_tarjeta">
-                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                                <a class="btn btn-primary" href="../pages/details.html">More</a>
                             </div>
                         </div>                    
                     </div>
