--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                             <a class="nav-link" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./assets/pages/upcoming_events.html">Upcoming Events</a>
+                            <a class="nav-link" href="./pages/upcoming_events.html">Upcoming Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./assets/pages/past_events.html">Past Events</a>
+                            <a class="nav-link" href="./pages/past_events.html">Past Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./assets/pages/contact.html">Contact</a>
+                            <a class="nav-link" href="./pages/contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./assets/pages/stats.html">Stat</a>
+                            <a class="nav-link" href="./pages/stats.html">Stat</a>
                         </li>                  
                     </ul>
                 </div>
@@ -117,7 +117,7 @@
                         <div class="precio_tarjeta">
                             <p>Precio: U$D4500</p>
                             <div class="boton_tarjeta">
-                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                                <a class="btn btn-primary" href="./pages/details.html">More</a>
                             </div>
                         </div>                    
                     </div>
@@ -132,7 +132,7 @@
                         <div class="precio_tarjeta">
                             <p>Price: U$D4500</p>
                             <div class="boton_tarjeta">
-                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                                <a class="btn btn-primary" href="./pages/details.html">More</a>
                             </div>
                         </div>                    
                     </div>
@@ -147,7 +147,7 @@
                         <div class="precio_tarjeta">
                             <p>Price: U$D9000</p>
                             <div class="boton_tarjeta">
-                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                                <a class="btn btn-primary" href="./pages/details.html">More</a>
                             </div>
                         </div>                    
                     </div>
@@ -162,7 +162,7 @@
                         <div class="precio_tarjeta">
                             <p>Price: U$D13000</p>
                             <div class="boton_tarjeta">
-                                <a class="btn btn-primary" href="./assets/pages/details.html">More</a>
+                                <a class="btn btn-primary" href="./pages/details.html">More</a>
                             </div>
                         </div>                    
                     </div>
