--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../img/favicon.ico">
+    <link rel="icon" type="image/png" href="../assets/img/favicon.ico">
     <link rel="stylesheet" href="https://kit.fontawesome.com/f8407159fd.css" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <title>Contact</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div class="container">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../../index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
+                <a class="navbar-brand" href="../../index.html"><img src="../assets/img/logo.png" alt="logo" class="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,16 +26,16 @@
                             <a class="nav-link" href="../../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./upcoming_events.html">Upcoming Events</a>
+                            <a class="nav-link" href="upcoming_events.html">Upcoming Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./past_events.html">Past Events</a>
+                            <a class="nav-link" href="past_events.html">Past Events</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./stats.html">Stat</a>
+                            <a class="nav-link" href="stats.html">Stat</a>
                         </li>                  
                     </ul>
                 </div>
@@ -54,13 +54,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../img/Music_Concert.jpg" class="d-block w-100 carrosel_image" alt="concierto">
+                        <img src="../assets/img/Music_Concert.jpg" class="d-block w-100 carrosel_image" alt="concierto">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/Cinema.jpg" class="d-block w-100 carrosel_image" alt="cinema">
+                        <img src="../asssets/img/Cinema.jpg" class="d-block w-100 carrosel_image" alt="cinema">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/Costume_Party.jpg" class="d-block w-100 carrosel_image" alt="costume party">
+                        <img src="../asssets/img/Costume_Party.jpg" class="d-block w-100 carrosel_image" alt="costume party">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -116,6 +116,9 @@
                     </div>                
                 </div>
             </form>
+            <div class="container">
+                <div style="width:100%;height:0;padding-bottom:81%;position:relative;"><iframe src="https://giphy.com/embed/jcxtvm2bsZDH2" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/hair-template-gaps-jcxtvm2bsZDH2">via GIPHY</a></p>
+            </div>
             <!--Contenido-->
             <div class="container contacto col-sm-8 col-md-6 col-lg-6 col-xl-6 col-xxl-6"><!--VER ESTO COMO COÑO ES-->
                 <form>
@@ -150,7 +153,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="../js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
     <script src="https://kit.fontawesome.com/f8407159fd.js" crossorigin="anonymous"></script>
 </body>
 </html>
